--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           source: "app.zip"
-          target: "/home/ubuntu/"
+          target: "~/app.zip"
 
       - name: Deploy Application
         uses: appleboy/ssh-action@v0.1.1
