--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,14 +24,14 @@ jobs:
       - name: Package Application
         run: zip -r app.zip .
 
-      - name: Copy files to EC2
+      - name: Copy files to EC2 instance
         uses: appleboy/scp-action@v0.1.1
         with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
+          host: ${{ secrets.EC2_PUBLIC_IP }}
+          username: ec2-user
           key: ${{ secrets.EC2_KEY }}
-          source: "app.zip"
-          target: "~/app.zip"
+          source: "."
+          target: "/home/ec2-user/book-shop"
 
       - name: Deploy Application
         uses: appleboy/ssh-action@v0.1.1
