--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,16 +28,17 @@ jobs:
         uses: appleboy/scp-action@v0.1.1
         with:
           host: ${{ secrets.EC2_PUBLIC_IP }}
-          username: ec2-user
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           source: "."
           target: "/home/ec2-user/book-shop"
+          port : 22
 
       - name: Deploy Application
         uses: appleboy/ssh-action@v0.1.1
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ec2-user
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
             sudo apt-get update
