--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,13 +31,13 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           source: "app.zip"
-          target: "/home/ubuntu/ec2-user/book-shop"
+          target: "/home/ubuntu/"
           port : 22
 
       - name: Deploy Application
         uses: appleboy/ssh-action@v0.1.1
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: ${{ secrets.EC2_PUBLIC_IP }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
