--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,12 +32,12 @@ jobs:
 
       - name: Write SSH Key
         run: |
-          echo "${{ secrets.EC2_KEY }}" > key.pem
-          chmod 600 key.pem
+          echo "${{ secrets.EC2_KEY }}" > Aws.pem
+          chmod 600 Aws.pem
 
       - name: Debug SSH Connection
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "echo Connection Successful"
+          ssh -vvv -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_PUBLIC_IP }} "echo Connection Successful"
 
       - name: Copy files to EC2
         uses: appleboy/scp-action@master
