--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
 
       - name: Debug SSH Connection
         run: |
-          ssh -vvv -o StrictHostKeyChecking=no -i key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_PUBLIC_IP }} "echo Connection Successful"
+          ssh -vvv -o StrictHostKeyChecking=no -i Aws.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_PUBLIC_IP }} "echo Connection Successful"
 
       - name: Copy files to EC2
         uses: appleboy/scp-action@master
